--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,6 +2,10 @@
 
 one:
   email: MyString
+  hashed_password: MyString
+  salt: MyString
 
 two:
   email: MyString
+  hashed_password: MyString
+  salt: MyString
